Fix W3c Validator errors on all templates

--- a/aboutus/templates/aboutus/about_us.html
+++ b/aboutus/templates/aboutus/about_us.html
@@ -23,7 +23,7 @@
                 Recognizing the significance of these art forms, the shop aimed to provide them with a global platform, 
                 connecting them with art enthusiasts worldwide."</p>
                 <div class="d-flex justify-content-center align-items-center">
-                    <img class="col-12 col-md-6 text-center my-3" src="https://res.cloudinary.com/dript5k0k/image/upload/v1693344310/jambhala-mh-2882_002_icdvhh.webp" width="300px" alt="Image of Zambalha, god of wealth">
+                    <img class="col-12 col-md-6 text-center my-3" src="https://res.cloudinary.com/dript5k0k/image/upload/v1693344310/jambhala-mh-2882_002_icdvhh.webp" width="300" alt="Image of Zambalha, god of wealth">
                 </div>
             <h4>The Beginning</h2>
 
@@ -33,7 +33,7 @@
                 quaint villages, guardians of an <span>age-old tradition of craftsmanship</span>. These artists, often residing
                 in remote areas, were creating extraordinary pieces of art, yet their creations remained largely
                 secluded from the world, held back by the very mountains that nurtured them.</p>
-                <img class="col-12 col-md-4 mb-5 float-right text-center" src="https://res.cloudinary.com/dript5k0k/image/upload/v1695899334/2_p47ijt.webp" width="300px" alt="image of a Buddhist temple">
+                <img class="col-12 col-md-4 mb-5 float-right text-center" src="https://res.cloudinary.com/dript5k0k/image/upload/v1695899334/2_p47ijt.webp" width="300" alt="image of a Buddhist temple">
 
 
             <h4>The Mission</h2>
