--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -23,7 +23,7 @@
                 <h2 class="logo-font text-center text-uppercase mt-4">Checkout</h2>
             </div>
             <div class="col-12 text-center mb-4">
-                <p class="mb-4">Order Summary: {{ item_count }} items in your Cart
+                <p class="mb-4">Order Summary: {{ item_count }} items in your Cart</p>
             </div>
         </div>
         <div class="row">
