--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -22,7 +22,7 @@
             <h2 class="logo-font text-uppercase mt-4">Order Complete!</h2>
             <hr>
             <p>Your order number is <strong>{{ order.order_number }}</strong>.
-                <br>A confirmation email has been sent to <strong>{{ order.email }}</strong></p>
+                <br>A confirmation email has been sent to <strong>{{ order.email }}</strong>
             </p>
         </div>
     </div>    
