--- a/checkout/templates/checkout/confirmation_email.html
+++ b/checkout/templates/checkout/confirmation_email.html
@@ -30,7 +30,7 @@
     {% endfor %}
 </ul>
 <ul>
-    <li><strong>Grand-Total:</strong>${{ order.grand_total }}</p>
+    <li><strong>Grand-Total:</strong>${{ order.grand_total }}</li>
 </ul>
 
 <p>If you have any questions, please contact us at <a href="info@tibetartberlin">Customer Service</a>.</p>
