--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -57,7 +57,7 @@
         <div class="card h-100 border-0">
             <a href="{% url 'product_detail' entry.product.id %}">
                 <img src="{{ MEDIA_URL }}small/{{ entry.image_name }}" 
-                    alt="Product Image" width="300px"                    
+                    alt="Product Image" width="300"                    
                     class="centered-image"
                     onerror="this.onerror=null; this.src='{{ MEDIA_URL }}noimage.png';">
             </a>
