--- a/profiles/templates/profiles/display_profile.html
+++ b/profiles/templates/profiles/display_profile.html
@@ -21,6 +21,7 @@
             <div class="col-12 text-center py-3">
                 <h2 class="logo-font text-center text-uppercase mt-4">My Profile</h2>
             </div>
+        </div>
     </div>
  {{ profile }}
 {% endblock %}
