--- a/blogpost/templates/blogpost/blogpost_detail.html
+++ b/blogpost/templates/blogpost/blogpost_detail.html
@@ -19,10 +19,10 @@
      <div class="row mb-2 mx-auto d-block">
         <div class="col 12">
             <h2 class="mb-5">{{ article.title }}</h2>
-            <img class="mx-auto mb-5 d-block" src="{{ MEDIA_URL }}{{ article.article_image_name }}" alt="" width="500px">
+            <img class="mx-auto mb-5 d-block" src="{{ MEDIA_URL }}{{ article.article_image_name }}" alt="" width="500">
             <p class="mb-2">Written by: <span class="font-weight-bold">{{ article.writer_name }}</span></p>
             <p class="mb-2">Published on: <span class="font-italic">{{ article.published_date }}</span></p>
-            <p class="mb-1">{{ article.article_text|safe }}</p>
+             {{ article.article_text|safe }}
             <a href="{% url 'blogpost_list' %}">Blog Article List</a>
             <small class="text-muted">
                 <i class="fas fa-comment mr-1"></i>
