--- a/blogpost/templates/blogpost/blogpost_list.html
+++ b/blogpost/templates/blogpost/blogpost_list.html
@@ -27,14 +27,14 @@
                         <h2 class="h4">{{ article.title }}</h2>
                         <p class="mb-1">By: <span class="font-weight-bold">{{ article.writer_name }}</span></p>
                         <p class="mb-1">Published on: <span class="font-italic">{{ article.published_date }}</span></p>
-                        <p class="mb-1">{{ article.article_text_short|safe }}</p>
+                        {{ article.article_text_short|safe }}
                         <a href="{% url 'blogpost_detail' pk=article.pk %}">...continue reading</a>
                         <small class="text-muted">
                             <i class="fas fa-comment mr-1"></i>
                             <a href="{% url 'new_blogpost_comment' blogpost_id=article.pk %}">Comments ({{ article.comment_count }})</a>
                         </small>
                     </li>
-                    <br>
+                
                 {% endfor %}
             </ul>
         </div>
