--- a/comment/templates/comment/enter_comment.html
+++ b/comment/templates/comment/enter_comment.html
@@ -24,7 +24,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <img src="{{ product.productImageNameFull.url }}" style="width: 100%; max-width: 300px;" alt="{{ product.title }}">
+            <img src="{{ product.productImageNameFull.url }}" style="width: 100%; max-width: 300;" alt="{{ product.title }}">
         </div>
         <div class="col-md-6">
             <h2 class="mb-2">{{ product.title }}</h2>
