--- a/favorite/templates/favorite/favorite_products.html
+++ b/favorite/templates/favorite/favorite_products.html
@@ -23,7 +23,7 @@
     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-1">
         <div class="card h-100 border-0">
             <a href="{% url 'product_detail' product.id %}">
-                <img src="{{ MEDIA_URL }}{{ product.productImageNameSmall }}" alt="Product Image" width="300px" class="centered-image" 
+                <img src="{{ MEDIA_URL }}{{ product.productImageNameSmall }}" alt="Product Image" width="300" class="centered-image" 
                 onerror="this.onerror=null; this.src='{{ MEDIA_URL }}noimage.png';">
             </a>
             <div class="card-body pb-0">
