--- a/products/templates/products/thangka_paintings_list.html
+++ b/products/templates/products/thangka_paintings_list.html
@@ -40,7 +40,7 @@
     <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
         <div class="card h-100 border-0">
             <a href="{% url 'product_detail' entry.product.id %}">
-                <img src="{{ MEDIA_URL }}small/{{ entry.image_name }}" alt="Product Image" width="300px" class="centered-image" onerror="this.onerror=null; this.src='{{ MEDIA_URL }}noimage.png';">
+                <img src="{{ MEDIA_URL }}small/{{ entry.image_name }}" alt="Product Image" width="300" class="centered-image" onerror="this.onerror=null; this.src='{{ MEDIA_URL }}noimage.png';">
             </a>
             <div class="card-body pb-0">
                 <p class="mb-0">{{ entry.product.title }}</p>
