--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -31,11 +31,11 @@
     </li>
     
     <li class="nav-item dropdown">
-      <a class="logo-font nav-link text-black mr-3" href="{% url 'blogpost_list' %}" id="home-link">Blog</a>
+      <a class="logo-font nav-link text-black mr-3" href="{% url 'blogpost_list' %}">Blog</a>
     </li>
     <!-- Contact Us -->
     <li class="nav-item">
-      <a class="logo-font nav-link text-black mr-3" href="{% url 'contact_us' %}" id="home-link">Contact Us</a>
+      <a class="logo-font nav-link text-black mr-3" href="{% url 'contact_us' %}">Contact Us</a>
     </li>
     
   </ul>
