--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,5 +1,6 @@
+<ul>
 <li class="list-inline-item">
-    <a class="text-black nav-link d-block d-lg-none" href="{url, 'search_results'}" id="mobile-search" data-toggle="dropdown"
+    <a class="text-black nav-link d-block d-lg-none" href="{% url 'search_results' %}" id="mobile-search" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-search fa-lg"></i></div>
@@ -7,7 +8,7 @@
         </div>
     </a>
     <div class="dropdown-menu border-0 w-100 p-3 rounded my-0" aria-labelledby="mobile-search">
-        <form class="form" method="GET" action="">
+        <form class="form" method="GET">
             <div class="input-group w-100">
                 <input class="form-control border border-black rounded" type="text" name="q"
                     placeholder="Search our site">
@@ -23,7 +24,7 @@
     </div>
 </li>
 <li class="list-inline-item dropdown">
-    <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
+    <a class="text-black nav-link d-block d-lg-none" href="#" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-user fa-lg"></i></div>
@@ -59,3 +60,4 @@
         </div>
     </a>
 </li>
+</ul>
