--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -120,7 +120,7 @@
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
 
-<script type="text/javascript">
+<script>
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
@@ -141,3 +141,5 @@
     })
 </script>
 {% endblock %}
+
+
