--- a/comment/templates/comment/new_blogpost_comment.html
+++ b/comment/templates/comment/new_blogpost_comment.html
@@ -13,7 +13,7 @@
 <div class="container header-container">
     <div class="row">
         <div class="col-12 text-center text-uppercase logo-font pb-2 my-5">
-            <div class="header-text">Blog</div>
+            <h1 class="header-text">Blog</h1>
         </div>
     </div>
 </div>
