--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,15 +15,15 @@
     <div class="row d-flex custom-position" style="height:100vh;">
         
         <div class="col-12 text-center home-text">
-            <h1 class="text-black text-center custom-text ">
-                Welcome to the Tibet Art Shop: </h1>
-            <h2 class="lead">Discover <span>arts and crafts from the Himalayas,</span> where every piece tells a story.</h2>
+            <h1 class="text-uppercase text-black text-center custom-text ">
+                Welcome to the Tibet Art Store: </h1>
+            <h2><strong>Discover Unique arts and crafts from the Himalayas, where every piece tells a story.</strong></h2>
         
             <div class="my-5">
-                <h4>
+                <h3>
                     <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded text-uppercase py-3">Shop
                         Now</a>
-                </h4>
+                </h3>
             </div>
         </div>
     </div>
