--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -9,7 +9,7 @@
 <div class="container header-container">
     <div class="row">
         <div class="col-12 text-center logo-font my-5">
-            <div class="header-text">Our Products</div>
+            <h1 class="header-text">Our Products</h1>
         </div>
     </div>
 </div>
@@ -22,7 +22,8 @@
         <div class="row justify-content-left mb-3">
             <div class="col-12 col-md-3 col-lg-3 py-1 px-2">
                 <div class="sort-select-wrapper">
-                    <select name="category" class="custom-select-md p-0 custom-select-sm rounded-2 w-100">
+                    <label for="s1" class="d-none visually-hidden">sort by</label>
+                    <select name="category" id="s1" class="custom-select-md p-0 custom-select-sm rounded-2 w-100">
                         <option value="all" {% if category == 'all' %}selected{% endif %}>All Categories</option>
                         <option value="6" {% if category == '6' %}selected{% endif %}>Thangka Painting</option>
                         <option value="3" {% if category == '3' %}selected{% endif %}>Mandalas</option>
@@ -35,7 +36,8 @@
             </div>
             <div class="col-12 col-md-3 col-lg-3 py-1 px-2">
                 <div class="sort-select-wrapper">
-                    <select name="sorting" class="custom-select-md p-0 custom-select-sm rounded-2 w-100">
+                    <label for="s2" class="d-none visually-hidden">sort by</label>
+                    <select name="sorting" id="s2" class="custom-select-md p-0 custom-select-sm rounded-2 w-100">
                         <option value="" disabled selected>Sort by</option>
                         <option value="name_asc" {% if sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
                         <option value="name_desc" {% if sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
@@ -57,7 +59,7 @@
         <div class="card h-100 border-0">
             <a href="{% url 'product_detail' entry.product.id %}">
                 <img src="{{ MEDIA_URL }}small/{{ entry.image_name }}" 
-                    alt="Product Image" width="300"                    
+                    alt="Product: {{ entry.product.sku }}" width="300"                    
                     class="centered-image"
                     onerror="this.onerror=null; this.src='{{ MEDIA_URL }}noimage.png';">
             </a>
@@ -67,7 +69,7 @@
             <div class="card-footer bg-white pt-0 border-0 text-left">
                 <div class="row">
                     <div class="col">
-                        <p class="lead mb-0 text-left font-weight-bold">USD$ {{ entry.product.price }}</p>
+                        <h4 class="lead mb-0 text-left font-weight-bold">USD$ {{ entry.product.price }}</h4>
                         {% if entry.product.productCategory %}
                         <p class="small mt-1 mb-0">
                             <a class="text-muted" 
@@ -77,20 +79,19 @@
                         </p>
                         {% endif %}
                         <div class="mb-3">
-                            <small class="text-muted">
+                            <strong class="">
                                 <i class="fas fa-comment mr-1"></i>
-                                <a href="{% url 'enter_comment' entry.product.id %}">Comments ({{ entry.comment_count }})</a>
-                            </small>
-
+                                <a href="{% url 'enter_comment' entry.product.id %}" style="color: darkblue;">Comments ({{ entry.comment_count }})</a>
+                            </strong>
                             {% if request.user.is_superuser %}
-                            <small class="ml-3">
+                            <strong class="ml-3">
                                 <i class="fas fa-edit mr-1"></i>
-                                <a href="{% url 'edit_product' entry.product.id %}">Edit  </a>
-                            </small>
-                            <small class="ml-3">
+                                <a href="{% url 'edit_product' entry.product.id %}" style="color: darkblue;">Edit  </a>
+                            </strong>
+                            <strong class="ml-3">
                                 <i class="fas fa-trash mr-1"></i>
-                                <a class="text-danger" href="{% url 'delete_product' entry.product.id %}">Delete</a>
-                            </small>
+                                <a class="text-danger" href="{% url 'delete_product' entry.product.id %}"style="color: darkred;">Delete</a>
+                            </strong>
                             {% endif %}
                         </div>
                         <div class="d-flex">
@@ -138,7 +139,9 @@
     {% endif %}
     {% endfor %}
 </div>
-<div class="pagination-container adjusted-pag">
+
+
+<div class="pagination-container adjusted-page mb-3">
     <div class="pagination">
         <span class="step-links">
             {% if products.has_previous %}
