--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="col-12 d-flex justify-content-center">
   <div class="container text-center form-text">
-    <h1 class="linebreak logo-font mb-4 text-uppercase">{% trans "Sign In" %}</h1>
+    <h1 class="header-text mb-4 text-uppercase">{% trans "Sign In" %}</h1>
     
     <p>{% blocktrans %}If you have not created an account yet, then please
       <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
