--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="container text-center form-text">
-  <h2 class="linebreak logo-font mb-4  text-uppercase">{% trans "Sign up" %}</h2>
+  <h1 class="header-text text-uppercase">{% trans "Sign up" %}</h1>
 
   <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
