--- a/blogpost/templates/blogpost/blogpost_detail.html
+++ b/blogpost/templates/blogpost/blogpost_detail.html
@@ -7,7 +7,7 @@
 <div class="container header-container">
     <div class="row">
         <div class="col-12 text-center text-uppercase logo-font pb-2 my-5">
-            <div class="header-text">Blog</div>
+            <h1 class="header-text">Blog</h1>
         </div>
     </div>
 </div>
@@ -23,11 +23,10 @@
             <p class="mb-2">Written by: <span class="font-weight-bold">{{ article.writer_name }}</span></p>
             <p class="mb-2">Published on: <span class="font-italic">{{ article.published_date }}</span></p>
              {{ article.article_text|safe }}
-            <a href="{% url 'blogpost_list' %}">Blog Article List</a>
-            <small class="text-muted">
+            <strong class="text-muted">
                 <i class="fas fa-comment mr-1"></i>
-                <a href="{% url 'new_blogpost_comment' blogpost_id=article.pk %}">Comments ({{ article.comment_count }})</a>
-            </small>
+                <a href="{% url 'new_blogpost_comment' blogpost_id=article.pk %}" style="color: darkblue;">Comments ({{ article.comment_count }})</a>
+            </strong>
         </div>
         <div class="text-center my-5">
             <a href="{% url 'blogpost_list' %}" class="btn btn-sm">Back to Bloglist</a>
