--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -3,22 +3,12 @@
 {% load cart_tools %}
 {% block extra_title %} Cart {% endblock %}
 
-{% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
-{% endblock %}
-
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid mb-2 m-0 p-0">
+<div class="container header-container">
     <div class="row">
-        <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4 text-center ml-3 text-align-center ">Shopping Cart</h2>
-            <hr>
+        <div class="col-12 text-center logo-font my-5">
+            <h1 class="header-text">Shopping Cart</h1>
         </div>
     </div>
 
