--- a/contact/templates/contact/contact_us.html
+++ b/contact/templates/contact/contact_us.html
@@ -10,7 +10,7 @@
 <div class="container header-container">
     <div class="row">
         <div class="col-12 text-center text-uppercase logo-font my-5">
-            <div class="header-text">Contact Us Form</div>
+            <h1 class="header-text">Contact Us</h1>
         </div>
     </div>
 </div>
