--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center py-3">
-                <h2 class="logo-font text-center text-uppercase mt-4">My Profile</h2>
+                <h1 class="text-center header-text text-uppercase my-4">My Profile</h1>
                 <p>Username: {{ user.username }}</p>
             </div>
         </div>
@@ -32,7 +32,7 @@
                 <form action="{% url 'profile' %}" method="POST" class="mt-3" id="update-profile-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black text-uppercase float-right">Update Information</button>
+                    <button class="btn btn-black text-uppercase float-right my-3">Update Information</button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
@@ -50,10 +50,12 @@
                             {% for order in orders %}
                                 <tr>
                                     <td>
-                                        <a href="{% url 'order_history' order.order_number %}"
-                                            title="{{ order.order_number }}">
-                                            {{ order.order_number|truncatechars:6 }}
-                                        </a>
+                                        <strong>
+                                            <a href="{% url 'order_history' order.order_number %}"
+                                                title="{{ order.order_number }}" style="color: darkblue;">
+                                                {{ order.order_number|truncatechars:6 }}
+                                            </a>
+                                        </strong>
                                     </td>
                                     <td>{{ order.date }}</td>
                                     <td>${{ order.grand_total }}</td>
