--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="container text-center form-text">
-  <h2 class="linebreak logo-font mb-4  text-uppercase">{% trans "Log Out" %}</h2>
+  <h2 class="lheader-text mb-4  text-uppercase">{% trans "Log Out" %}</h2>
   
   <p class="m-3">{% trans 'Are you sure you want to log out?' %}</p>
 
