--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -17,17 +17,22 @@
 {% block content %}
     <div class="overlay"></div>    
     <div class="container">
-        <!-- Order Summary -->
+        
         <div class="row">
             <div class="col-12 text-center py-3">
-                <h2 class="logo-font text-center text-uppercase mt-4">Checkout</h2>
-            </div>
-            <div class="col-12 text-center mb-4">
-                <p class="mb-4">Order Summary: {{ item_count }} items in your Cart</p>
+                <h1 class="header-text text-center text-uppercase mt-4">Checkout</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <!-- Order Summary -->
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-12 text-center mb-4">
+                        <p class="mb-4">Order Summary: {{ item_count }} items in your Cart</p>
+                    </div>
+                </div>
+        
+                <div class="col-12">
                 <div class="row">
                     <div class="col-7">
                         <p class="my-0"><strong>{{ item.product.title }}</strong></p>
@@ -54,12 +59,10 @@
                         <p class="my-1 ">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
                         <p class="my-1">Qty:{{ item.quantity }}</p>
                     </div>
-                    
                 </div>
                 {% endfor %}
                 <hr class="my-1">
                 <div class="row text-black text-right">
-                    
                     <div class="col-7 offset-2">
                         <p class="my-1">Order Total:</p>
                         <p class="my-1">Delivery:</p>
@@ -72,7 +75,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6">
+
+            <!-- Delivery Details Form -->
+            <div class="col-lg-6 col-12">
                 <p class="text-muted text-center text-black">Your delivery Details</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
