--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -15,69 +15,67 @@
     </div>
 {% endblock %}
 {% block content %}
-    <div class="overlay"></div>    
-    <div class="container">
-        
-        <div class="row">
-            <div class="col-12 text-center py-3">
-                <h1 class="header-text text-center text-uppercase mt-4">Checkout</h1>
-            </div>
+<div class="overlay"></div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center py-3">
+            <h1 class="header-text text-center text-uppercase mt-4">Checkout</h1>
         </div>
-        <div class="row">
-            <!-- Order Summary -->
-            <div class="col-lg-6">
-                <div class="row">
-                    <div class="col-12 text-center mb-4">
-                        <p class="mb-4">Order Summary: {{ item_count }} items in your Cart</p>
-                    </div>
+    </div>
+
+    <div class="row mt-5">
+        <!-- Order Summary -->
+        <div class="col-md-6 col-12">
+            <p class="text-center mb-4">Order Summary: {{ item_count }} items in your Cart</p>
+            <div class="row">
+                <div class="col-7">
+                    <p class="my-0"></p>
                 </div>
-        
-                <div class="col-12">
-                <div class="row">
-                    <div class="col-7">
-                        <p class="my-0"><strong>{{ item.product.title }}</strong></p>
-                    </div>
-                                        
-                    <div class="col-3 text-right">
-                        <p class="mb-1 mt-0">Subtotal</p>
-                    </div>
-                </div>
-                {% for item in cart_items %}
-                <div class="row">
-                    <div class="col-3 mb-1">
-                        <a href="{% url 'product_detail' item.product.id %}">
-                            {% if item.product.productImageName %}
-                                <img class="w-100" src="{{ MEDIA_URL }}small/{{ item.product.productImageName }}" alt="{{ item.product.name  }}">
-                                            
-                            {% else %}
-                                <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name  }}">
-                            {% endif %}
-                        </a>
-                        <p class="my-0 font-weight-bold small font-italic">{{ item.product.title }}</p>
-                    </div>
-                    <div class="col-7 text-right">
-                        <p class="my-1 ">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
-                        <p class="my-1">Qty:{{ item.quantity }}</p>
-                    </div>
-                </div>
-                {% endfor %}
-                <hr class="my-1">
-                <div class="row text-black text-right">
-                    <div class="col-7 offset-2">
-                        <p class="my-1">Order Total:</p>
-                        <p class="my-1">Delivery:</p>
-                        <p class="my-1">Grand Total:</p>
-                    </div>
-                    <div class="col-2 text-right">
-                        <p class="my-1">${{ total | floatformat:2 }}</p>
-                        <p class="my-1">${{ delivery | floatformat:2 }}</p>
-                        <p class="my-1"><strong>${{ grand_total | floatformat:2 }}</strong></p>
-                    </div>
+                <div class="col-3 text-right">
+                    <p class="mb-1 mt-0">Subtotal</p>
                 </div>
             </div>
 
-            <!-- Delivery Details Form -->
-            <div class="col-lg-6 col-12">
+            {% for item in cart_items %}
+            <div class="row">
+                <!-- Product Image and Name -->
+                <div class="col-3 mb-4">
+                    <a href="{% url 'product_detail' item.product.id %}">
+                        {% if item.product.productImageName %}
+                            <img class="w-100" src="{{ MEDIA_URL }}small/{{ item.product.productImageName }}" alt="{{ item.product.name }}">
+                        {% else %}
+                            <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                        {% endif %}
+                    </a>
+                    <p class="my-0 font-weight-bold small font-italic">{{ item.product.title }}</p>
+                </div>
+                <!-- Product Price and Quantity -->
+                <div class="col-7 text-right">
+                    <p class="my-1">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                    <p class="my-1">Qty:{{ item.quantity }}</p>
+                </div>
+            </div>
+            {% endfor %}
+
+            <!-- Order Total, Delivery, Grand Total -->
+            <hr class="my-1">
+            <div class="row text-black text-right">
+                <div class="col-7 offset-2">
+                    <p class="my-1">Order Total:</p>
+                    <p class="my-1">Delivery:</p>
+                    <p class="my-1">Grand Total:</p>
+                </div>
+                <div class="col-2 text-right">
+                    <p class="my-1">${{ total | floatformat:2 }}</p>
+                    <p class="my-1">${{ delivery | floatformat:2 }}</p>
+                    <p class="my-1"><strong>${{ grand_total | floatformat:2 }}</strong></p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Delivery Details Form -->
+        <div class="col-lg-6 col-12">
                 <p class="text-muted text-center text-black">Your delivery Details</p>
                 <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
