--- a/products/templates/products/products_list.html
+++ b/products/templates/products/products_list.html
@@ -85,16 +85,16 @@
                             </strong>
                             {% if request.user.is_superuser %}
                             <strong class="ml-3">
-                                <i class="fas fa-edit mr-1"></i>
-                                <a href="{% url 'edit_product' entry.product.id %}" style="color: darkblue;">Edit  </a>
+                                <a href="{% url 'edit_product' entry.product.id %}" style="color: darkblue;">Edit</a>
+                                <i class="fas fa-trash mr-1"></i>
                             </strong>
                             <strong class="ml-3">
+                                <a class="text-danger" href="{% url 'delete_product' entry.product.id %}" style="color: darkred;">Delete</a>
                                 <i class="fas fa-trash mr-1"></i>
-                                <a class="text-danger" href="{% url 'delete_product' entry.product.id %}"style="color: darkred;">Delete</a>
                             </strong>
                             {% endif %}
                         </div>
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-center">
                             <form method="POST" action="{% url 'add_to_cart' entry.product.id %}" style="display: inline;">
                                 {% csrf_token %}
                                 <input type="hidden" name="product_id" value="{{ entry.product.id }}">
