--- a/templates/base.html
+++ b/templates/base.html
@@ -135,9 +135,7 @@
     
         <div class="row text-center">
             <div class="delivery-banner col">
-                <strong>
-                    <p class="text-black my-1"> Free delivery on orders over ${{ free_delivery_threshold }}!</p>
-                </strong>
+                <h3 class="text-black my-1"> Free delivery on orders over ${{ free_delivery_threshold }}!</h3>
             </div>
         </div>
     </header>
