--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -25,7 +25,7 @@
             <input type="email" id="z" name="email" placeholder="Your email address"><input type="submit" class="btn btn-sm rounded ml-2 my-2 " value="Subscribe">
           </form>
           <p>Plus stay up to date with new arrivals, offers events and lots more!</p>
-          <strong><a href="https://www.facebook.com/profile.php?id=61551754485242" target="_blank" style="color: black;"><i class="fab fa-facebook-square"></i> Follow us on Facebook!</a></strong>
+          <strong><a href="https://www.facebook.com/profile.php?id=61551754485242" target="_blank" rel="noopener noreferrer external" style="color: black;"><i class="fab fa-facebook-square"></i> Follow us on Facebook!</a></strong>
         </div>
 
         <div class="col-lg-4 col-md-6">
